/*
 * $Id: ChangeLog,v 1.572 2003/01/02 04:51:30 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-02 07:01 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/inet.c
    * removed warning when not compiling with thread support

  * include/inet.h
    ! Fixed compilation ( unresolved SD_BOTH ) on some BCC installations.

2003-01-02 05:44 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    + Now StartThread on method can be called both with a method pointer or
      with a method name:
        StartThread( oMyObject, oMyMethodPtr, ... )
      or
        StartThread( oMyObject, "MethodName", ... )

  * tests/mttest.prg
    * Changed one of the StartThraed to show the "methodname" call.


2003-01-02 04:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/hbstack.h
    * Default compilation is now WITHOUT threads; -DHB_THREAD_SUPPORT
      must be specified for thread functions to be included.

  * include/thread.h
  * source/vm/thread.c
    * Changed grammar of StartThread Function as follow (all are
      alternatives)
        StarThread( @Function(), param1 ... paramN )
        StarThread( "Function_Name", param1 ... paramN )
        StarThread( {codeblock}, param1 ... paramN )
        StarThread( Object, Method, param1 ... paramN )
      This allows to pass an object to a function when starting a
      thread as a normal parameter.

  * tests/client.prg
  * tests/mtcomplex.prg
  * tests/mtgc.prg
  * tests/mttest.prg
    * Modified to reflect the change in StartThread grammar.

2003-01-01 21:51 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/garbage.c
    + Added InetCRLF() function in inet module, just a shortcut nice to have.

2003-01-01 19:10 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/garbage.c