@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.572 2003/01/02 04:51:30 jonnymind Exp $
+ * $Id: ChangeLog,v 1.573 2003/01/02 06:07:36 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-01-02 07:28 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * include/inet.h
+    ! Using winsock2 instead of winsock. Originarily, it was that way, but 
+      somehow this has been changed.
 
 2003-01-02 07:01 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/inet.c
